--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@ footer {
   text-align:center;
 }
 </style>
+<script defer src="https://pewpi-infinity.github.io/infinity-crown-index/js/infinity-menu.js"></script>
 </head>
 <body>
 <div class="container">
